[package]
name = "thread_tryjoin"
version = "0.3.0"
license = "MIT/Apache-2.0"
authors = ["Jan-Erik Rediger <janerik@fnordig.de>", "Bob <nottxy@gmail.com>"]
keywords = ["thread", "tryjoin"]
description = "Try joining a thread"
homepage = "https://github.com/nottxy/thread_tryjoin"
repository = "https://github.com/nottxy/thread_tryjoin"
documentation = "https://docs.rs/thread_tryjoin"

[dependencies]
libc = "0.2"
